# iota-base-rs

./: Cargo.toml  README.md
src/: lib.rs
src/create_message_transaction/: get_message_from_trx.rs  intro.md  message_trx_in_2_steps.rs  message_trx_in_3_steps.rs  message_trx_in_5_steps.rs
src/create_value_transaction/: create_account.rs  get_account_info.rs  intro.md  transfer_value.rs
src/misc_tools/: get_addresses_of_account.rs  get_transaction_trytes.rs  intro.md
src/subscribe_node_events/: intro.md  monitor_address.rs  monitor_confirmed_trx.rs  monitor_value_trx.rs
